Address compiler warnings in 'scala' subproject